# codeforge-ai

./: CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  setup.py
docs/: api.md  architecture.md  changelog.md  index.md  license.md
docs/api/: core.md
docs/examples/: basic.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: extra.css
examples/: advanced_usage.py  basic_usage.py
src/auto_coder/: __init__.py  core.py  types.py  utils.py
src/codeforge/: __init__.py  core.py  exceptions.py
tests/: test_auto_coder.py  test_integration.py
